Redeob client